--- a/src/css/01-gallery.css
+++ b/src/css/01-gallery.css
@@ -5,7 +5,7 @@
 
 .gallery {
   display: grid;
-  max-width: 1140px;
+  max-width: 1140px;=
   grid-template-columns: repeat(auto-fit, minmax(320px, 1fr));
   grid-auto-rows: 240px;
   grid-gap: 12px;
@@ -15,6 +15,7 @@
 }
 
 .gallery__item {
+  list-style: none;
   position: relative;
   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.2),
     0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px -1px rgba(0, 0, 0, 0.12);
